# TomatOS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  code  image-debug.sh  image.sh  test.asm  testtest
CoreLib/: CoreLib.csproj  CoreLib.sln  Program.cs
CoreLib/System/: Array.cs  Attribute.cs  Boolean.cs  Byte.cs  Char.cs  DivideByZeroException.cs  Double.cs  Exception.cs  IndexOutOfRangeException.cs  Int16.cs  Int32.cs  Int64.cs  IntPtr.cs  NullReferenceException.cs  Object.cs  OverflowException.cs  SByte.cs  Single.cs  String.cs  SystemException.cs  UInt16.cs  UInt32.cs  UInt64.cs  UIntPtr.cs  ValueType.cs
ManagedKernel/: ManagedKernel.sln
ManagedKernel/Tomato.Kernel/: Kernel.cs  Native.cs  Program.cs  Tomato.Kernel.csproj
Pentagon/: Pentagon.sln
Pentagon/Corelib/: Corelib.csproj
Pentagon/Pentagon/: Acpi.cs  IPciDriver.cs  Kernel.cs  MemoryServices.cs  Pci.cs  PciIrq.cs  Pentagon.csproj  Test.cs  VirtioPci.cs
TomatOS/: TomatOS.sln
TomatOS/Tomato.Drivers.Fat/: FatDriver.cs  FatFs.cs  Program.cs
TomatOS/Tomato.Drivers.Virtio/: Program.cs  Tomato.Drivers.Virtio.csproj  VirtioBlock.cs  VirtioNet.cs  VirtioPci.cs
TomatOS/Tomato.Graphics/: Blitter.cs  Font.cs  (+3 more)
artifacts/: limine.cfg  limine.conf  target.json  ubuntu-regular.sdfnt
docs/: profiling.md
kernel/: kernel.c  kernel.h  limine_requests.c  limine_requests.h  linker.ld  main.c
makefiles/: uacpi.mk
scripts/: addr_translate.py  generate_font.py  image.sh  image_debug.sh  image_whpx.sh  profiler_gen.c  run_kvm.sh  run_kvm_uefi.sh  run_whpx.sh
test/: limine.cfg
(+768 files in other folders)
